Fix .site-main scrollbar height in WebKit based browsers

--- a/wp-content/themes/viktor-2020/src/scss/components/_layout.scss
+++ b/wp-content/themes/viktor-2020/src/scss/components/_layout.scss
@@ -63,6 +63,7 @@ body {
 
     &::-webkit-scrollbar {
         width: 8px;
+        height: 8px;
         background-color: $off-white-light;
 
         &-track {
